--- a/tasks/repositories.yml
+++ b/tasks/repositories.yml
@@ -37,6 +37,16 @@
     gpgkey: http://rpm.playonlinux.com/public.gpg
     enabled: true
 
+- name: Install Docker CE repository
+  yum_repository:
+    name: docker-ce-stable
+    file: docker-ce
+    description: Docker CE Stable - $basearch
+    baseurl: https://download.docker.com/linux/fedora/$releasever/$basearch/stable
+    gpgcheck: true
+    gpgkey: https://download.docker.com/linux/fedora/gpg
+    enabled: true
+
 - name: Install Free and Nonfree RPMFusion repositories
   dnf:
     name: "{{ workstation_rpmfusion_repositories }}"
